--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ body {
 }
 .container {
     padding: 0 1rem;
-    margin: auto;
     width: 100%;
     max-width: 450px;
 }
@@ -43,10 +42,6 @@ body {
 li, a {
     text-decoration: none;
     list-style: none;
-}
-
-.hideElement {
-    display: none;
 }
 
 /************ header and Nav ***************/
@@ -66,6 +61,10 @@ nav {
     color: var(--accent3-color);
 }
 
+header nav ul a{
+    display: none;
+}
+
 nav ul {
     margin: 0;
     display: flex;
@@ -74,6 +73,7 @@ nav ul {
     padding: 1.5rem 0;
 }
 
+
 nav li a{
     padding: 0 1rem;
     font-size: 1.6rem;
@@ -81,6 +81,12 @@ nav li a{
     box-shadow: inset 0 0 0 0 var(--accent3-color);
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
     border-radius: 3px;
+}
+
+nav i {
+    padding: 0 2rem;
+    font-size: 2rem;
+    color: var(--accent3-color);
 }
 
 nav li a:hover {
@@ -159,41 +165,47 @@ main {
     transition: scale(1.1);
 }
 
-.fa-solid {
+.socialLinks .fa-solid {
     color: var(--accent3-color);
     font-size: 3rem;
 }
 
 /****** About me section *******/
 
-#aboutMe {
+.aboutMe {
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     background: var(--accent2-color);
     color:var(--main-color); 
 }
 
-#aboutMe .container > * {
-    margin: 4rem auto;
+.aboutMe .container > * {
+    margin: 3rem auto;
 }
 
-#aboutMe > div {
+.aboutMe .container div > * {
+    margin: 1rem auto;
+}
+
+.aboutMe > div {
     text-align: center;
 }
 
-#aboutMe h2 {
+.aboutMe h2 {
     font-size: 3rem;
 }
 
-#aboutMe p {
+.aboutMe p {
     font-size:2rem;
     line-height: 1.5;
 }
 
-#aboutMe img {
-    height:35rem;
-    width: 23rem;
+.aboutMe img {
+    height:25rem;
+    width: 15rem;
+    margin: 0;
     border-radius: 5px;
     filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5));
 }
@@ -231,7 +243,11 @@ main {
 }
 
 .projectInfo > * {
-    margin: 1.2rem auto;
+    margin: 1rem auto;
+}
+
+.projectInfo > div > * {
+    margin: 2rem auto;
 }
 
 .projectInfo img {
@@ -241,25 +257,30 @@ main {
 }
 
 .projectInfo h3 {
+    text-align: center;
     font-size: 2.2rem;
     font-weight: 600;    
 }
 
 .projectInfo p {
     margin: 1rem 0;
-    
     font-size: 2rem;
     line-height: 1.3;
 }
 
 #myProjects ul {
     display: flex;
+    justify-content: space-evenly;
+}
+
+#myProjects li {
+    margin: 0;
 }
 
 #myProjects ul i {
     font-size: 3rem;
-    padding: 0 1rem;
 }
+
 
 .fa-js {
     color: #F7DF1E;
@@ -342,7 +363,7 @@ form textarea {
     color: var(--sub2-color);
 }
 
-/***** Footer *****/
+/********** Footer **********/
 footer {
     padding: 5rem;
     display:flex;
@@ -365,4 +386,19 @@ footer p {
         transform: scale(1.1); 
         }   
 
-     
+     @media screen and (min-width: 760px) {
+         .container {
+             max-width: 1400px;
+         }
+
+         .aboutMe .container{
+           display: flex;
+           flex-direction: row-reverse;
+         }
+
+         .projectInfo{
+            display: flex;
+            flex-direction: row;
+          }
+
+     }
