--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,16 @@ body {
 .container {
     padding: 0 1rem;
     width: 100%;
-    max-width: 450px;
+    /* max-width: 450px; */
 }
 
 li, a {
     text-decoration: none;
     list-style: none;
+}
+
+.hideElement {
+    display: none;
 }
 
 /************ header and Nav ***************/
@@ -61,7 +65,7 @@ nav {
     color: var(--accent3-color);
 }
 
-header nav ul a{
+.displayDesktop {
     display: none;
 }
 
@@ -75,26 +79,50 @@ nav ul {
 
 
 nav li a{
+    margin: 0 1.5rem;
     padding: 0 1rem;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     color: var(--accent2-color);
-    box-shadow: inset 0 0 0 0 var(--accent3-color);
-    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-    border-radius: 3px;
 }
 
-nav i {
+.link{
+    position: relative;
+  }
+
+.link:after{
+    content: '';
+    position: absolute;
+    width: 0; height: 3px;
+    display: block;
+    margin-top: 5px;
+    right: 0;
+    background: var(--accent3-color);
+    transition: width .2s ease;
+    -webkit-transition: width .2s ease;
+  }
+
+.link:hover:after{
+    width: 100%;
+    left: 0;
+    background: var(--accent3-color);
+    cursor: pointer;
+  }
+
+.displayMobile i {
     padding: 0 2rem;
     font-size: 2rem;
     color: var(--accent3-color);
 }
 
-nav li a:hover {
-    color: #fff;
-    box-shadow: inset 200px 0 0 0 var(--accent3-color);
-  }
+.displayMobile i {
+    transition: all 0.3s linear;
+        }
+  
+.displayMobile i:hover, .displayMobile i:active  {
+    transform: scale(1.4);
+     }
 
-  /********* Main and hero ***********/
+/********** MAIN/HERO SECTION ***********/
 
 main {
     display: flex;
@@ -120,6 +148,7 @@ main {
 }
 
 .hero h1 {
+    margin-top: 0;
     font-size: 4rem;
     color: var(--sub-color);
 }
@@ -170,7 +199,15 @@ main {
     font-size: 3rem;
 }
 
-/****** About me section *******/
+/* .top {
+    clip-path: polygon(0 0,100% 0,100% calc(100% - 45px),50% 100%,0 calc(100% - 45px));
+  }
+.bottom {
+    clip-path: polygon(0 0,50% 45px,100% 0,100% 100%,0 100%);
+    margin-top: -39px;
+  } */
+
+/****** ABOUT ME SECTION *******/
 
 .aboutMe {
     display: flex;
@@ -247,7 +284,13 @@ main {
 }
 
 .projectInfo > div > * {
-    margin: 2rem auto;
+    margin: 1rem auto;
+}
+
+.projectInfo > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .projectInfo img {
@@ -264,13 +307,14 @@ main {
 
 .projectInfo p {
     margin: 1rem 0;
-    font-size: 2rem;
+    padding: 0 1.2rem;
+    font-size: 1.6rem;
     line-height: 1.3;
 }
 
 #myProjects ul {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 #myProjects li {
@@ -279,6 +323,7 @@ main {
 
 #myProjects ul i {
     font-size: 3rem;
+    padding: 0 1.2rem 0 1.2rem;
 }
 
 
@@ -300,7 +345,7 @@ main {
     color: var(--accent2-color);
     border: 1.5px solid var(--accent3-color);
     border-radius: .5rem;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
 }
 
 /****** contact info section ******/
@@ -316,7 +361,7 @@ main {
 }
 
 #contactInfo .container > * {
-    margin: 2rem auto;
+    margin: 1.5rem auto;
 }
 
 #contactInfo h2{
@@ -325,8 +370,8 @@ main {
 }
 
 #contactInfo p {
-    font-size: 2rem;
     margin: 0 auto;
+    font-size: 1.6rem;
     text-align: center;
 }
 
@@ -365,11 +410,16 @@ form textarea {
 
 /********** Footer **********/
 footer {
-    padding: 5rem;
+    padding: 4rem 0 4rem 0rem;
     display:flex;
+    flex-direction: column;
     justify-content: center;
-    align-self: center;
+    row-gap: 2rem;
     background: var(--accent2-color);
+}
+
+footer .socialLinks ul i {
+    color: var(--main-color);   
 }
 
 footer p {
@@ -384,21 +434,94 @@ footer p {
 
 .grow:hover { 
         transform: scale(1.1); 
-        }   
+        } 
 
-     @media screen and (min-width: 760px) {
-         .container {
+/************** MEDIA QUERIES ****************/
+
+    @media screen and (min-width: 760px) {
+
+        html {
+            font-size: 13px;
+        }
+
+        .displayMobile {
+          display: none;  
+        }
+
+        .displayDesktop{
+            display: flex;
+        }
+
+        
+    }
+
+    @media screen and (min-width: 1020px) {
+
+        html {
+            font-size: 16px;
+        }
+
+        .projectInfo {
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+        
+        .projectInfo h3 {
+            margin-top: 0;
+        }
+
+        .projectInfo img { 
+            width: 35rem;
+            height: 25rem;
+        }
+    }
+
+    @media screen and (min-width: 1435px) {
+
+            html {
+                font-size: 19px;
+            }
+        }
+
+    @media screen and (min-width: 2500px) {
+
+            html {
+                font-size: 30px;
+            }
+    }
+
+         
+
+        /* .container {
+            max-width: 700px;
+        } */
+
+
+
+         /* .container {
              max-width: 1400px;
          }
 
          .aboutMe .container{
            display: flex;
-           flex-direction: row-reverse;
+           flex-direction: row;
          }
 
          .projectInfo{
             display: flex;
             flex-direction: row;
+            justify-content: space-between;
           }
 
-     }
+          .projectInfo ul{
+            justify-content: center;
+            align-items: center;
+            flex-basis: 25%;
+          }
+
+          .projectInfo h3 {
+              margin-top: 0;
+          } */
+
+     
