--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ nav {
     padding: 0 1rem;
     font-size: 2.5rem;
     font-weight: 600;
-    color: var(--accent3-color);
+    color: var(--accent2-color);
 }
 
 .displayDesktop {
@@ -78,8 +78,7 @@ nav ul {
 }
 
 
-nav li a{
-    margin: 0 1.5rem;
+nav li{
     padding: 0 1rem;
     font-size: 1.4rem;
     color: var(--accent2-color);
@@ -96,7 +95,7 @@ nav li a{
     display: block;
     margin-top: 5px;
     right: 0;
-    background: var(--accent3-color);
+    background: var(--accent-color);
     transition: width .2s ease;
     -webkit-transition: width .2s ease;
   }
@@ -104,12 +103,12 @@ nav li a{
 .link:hover:after{
     width: 100%;
     left: 0;
-    background: var(--accent3-color);
+    background: var(--accent-color);
     cursor: pointer;
   }
 
-.displayMobile i {
-    padding: 0 2rem;
+.displayMobile li i {
+    padding: 0 1rem;
     font-size: 2rem;
     color: var(--accent3-color);
 }
@@ -284,7 +283,7 @@ main {
 }
 
 .projectInfo > div > * {
-    margin: 1rem auto;
+    margin: .5rem auto;
 }
 
 .projectInfo > div {
@@ -301,13 +300,13 @@ main {
 
 .projectInfo h3 {
     text-align: center;
-    font-size: 2.2rem;
+    font-size: 1.8rem;
     font-weight: 600;    
 }
 
 .projectInfo p {
     margin: 1rem 0;
-    padding: 0 1.2rem;
+    padding: 0 1.5rem;
     font-size: 1.6rem;
     line-height: 1.3;
 }
@@ -322,7 +321,7 @@ main {
 }
 
 #myProjects ul i {
-    font-size: 3rem;
+    font-size: 2.6rem;
     padding: 0 1.2rem 0 1.2rem;
 }
 
@@ -338,16 +337,19 @@ main {
     color: #e34f26;
 }
 
-#myProjects button {
+.viewCodeBtn {
     width: 100px;
     height: 40px;
-    background: var(--main-color);
-    color: var(--accent2-color);
+    background: var(--accent3-color);
+    color: var(--sub2-color);
     border: 1.5px solid var(--accent3-color);
-    border-radius: .5rem;
-    font-size: 1.3rem;
+    border-radius: 3px;
+    font-size: 13px;
 }
 
+.viewCodeBtn:hover {
+    cursor: pointer;
+}
 /****** contact info section ******/
 
 #contactInfo {
@@ -375,8 +377,16 @@ main {
     text-align: center;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width:280px;
+    max-width: 600px;
+}
+
 form input{
-    margin-top: 1rem;
+    margin: .5rem 0;
     height: 2rem;
     width: 100%;
     background-color: var(--main-color);
@@ -390,7 +400,7 @@ form input{
 }
 
 form textarea {
-    margin-top: 1rem;
+    margin: .5rem 0;
     width: 100%;
     color: var(--sub-color);
     font-size: 1.2rem;
@@ -401,7 +411,7 @@ form textarea {
     height: 50px;
     width: 130px;
     margin-top: 20px;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 500;
     border-style: none;
     background: var(--accent3-color);
@@ -459,6 +469,10 @@ footer p {
 
         html {
             font-size: 16px;
+        }
+
+        .aboutMe > .container{
+            flex-direction: row;
         }
 
         .projectInfo {
