--- a/css/style.css
+++ b/css/style.css
@@ -63,12 +63,15 @@ nav {
     box-shadow: 0 0 10px 1px rgb(0 0 0 / 20%)
 }
 
-#myLogo {
+nav a {
     margin: 0;
+}
+
+#myLogo {
+    display: flex;
+    margin: 0;
+    height: 4rem;
     padding: 0 1rem;
-    font-size: 2.5rem;
-    font-weight: 600;
-    color: var(--accent2-color);
 }
 
 .displayDesktop {
