--- a/css/style.css
+++ b/css/style.css
@@ -1,575 +1,664 @@
-/************ TO DO 
-4. Give functionality and animation to site with JS
-5. Move media queries to be under the appropaites section that they we're needed for. Helps me with readability
-6. Create mobile nav/header with hamburger menu etc etc
-7. Scale site from mobile to larger screens and add media   queries when necassary
-8. Replace project placeholders with real projects
+/*************** 
 
-*******************/
+GLOBAL STYLING
 
-
-
-
-
-/******** global styles & utility classes **********/
+*****************/
 :root {
-    --main-color: #fffffe;
-    --sub-color: #0d0d0d;
-    --sub2-color: #eff0f3;
-    --accent-color: #ff8906;
-    --accent2-color: #2a2a2a;
-    --accent3-color: #e53170;
-} 
+  --main-color: #fffffe;
+  --sub-color: #0d0d0d;
+  --sub2-color: #e1dfe4;
+  --accent-color: #ff8906;
+  --accent2-color: #2a2a2a;
+  --accent3-color: #d44864;
+}
 
 html {
-    scroll-behavior: smooth;
-    overflow-x: hidden;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 * {
-    font-size: 10px;
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0 auto;
+  font-size: 10px;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0 auto;
 }
 
 body {
-    background: var(--main-color);
-    color: var(--sub2-color);
-    font-family: 'Segoe UI', sans-serif;
-    overflow-x: hidden;
+  background: var(--main-color);
+  color: var(--sub2-color);
+  font-family: 'Segoe UI', sans-serif;
+  overflow-x: hidden;
 }
 .container {
-    padding: 0 1rem;
-    width: 100%;
-    /* max-width: 450px; */
+  padding: 0 1rem;
+  width: 100%;
 }
 
-li, a {
-    text-decoration: none;
-    list-style: none;
+li,
+a {
+  text-decoration: none;
+  list-style: none;
 }
 
-.hideElement {
-    display: none;
+/************************ 
+
+HEADER AND NAV 
+
+************************/
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: var(--main-color);
+  z-index: 1;
+  box-shadow: 0 0 10px 1px rgb(0 0 0 / 20%);
 }
-
-/************ header and Nav ***************/
-
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 0 10px 1px rgb(0 0 0 / 20%)
+  min-height: 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* box-shadow: 0 0 10px 1px rgb(0 0 0 / 20%); */
 }
-
-nav a {
-    margin: 0;
-}
-
 #myLogo {
-    display: flex;
-    margin: 0;
-    height: 4rem;
-    padding: 0 1rem;
+  display: flex;
+  margin: 0;
+  width: 6rem;
+  height: 4rem;
+}
+.nav-menu {
+  position: fixed;
+  left: -100%;
+  top: 5rem;
+  gap: 0;
+  flex-direction: column;
+  background-color: var(--main-color);
+  width: 100%;
+  text-align: center;
+  transition: 0.3s;
+}
+.nav-menu li {
+  padding: 1rem 0;
+  width: 100%;
+}
+.nav-menu li a {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: var(--accent2-color);
+}
+.nav-toggle {
+  display: block;
+  margin: 0;
 }
 
-.displayDesktop {
-    display: none;
+.nav-toggle.active .bar:nth-child(2) {
+  opacity: 0;
 }
 
-nav ul {
-    margin: 0;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 1.5rem 0;
+.nav-toggle.active .bar:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
 }
 
-
-nav li a{
-    margin: 0 1.2rem;
-    font-size: 1.4rem;
-    color: var(--accent2-color);
+.nav-toggle.active .bar:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
+}
+.bar {
+  display: block;
+  width: 30px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  background: var(--accent3-color);
+}
+.nav-menu.active {
+  left: 0;
+  box-shadow: 0 0 10px 1px rgb(0 0 0 / 20%);
+}
+nav a {
+  margin: 0;
+}
+.nav-toggle i {
+  font-size: 3rem;
+  color: var(--accent3-color);
+  background: transparent;
+  border-color: transparent;
+  cursor: pointer;
 }
 
-.link{
-    position: relative;
-  }
+/*****************
 
-.link a:after{
-    content: '';
-    position: absolute;
-    width: 0; height: 3px;
-    display: block;
-    margin-top: 5px;
-    right: 0;
-    background: var(--accent-color);
-    transition: width .2s ease;
-    -webkit-transition: width .2s ease;
-  }
+MAIN/HERO SECTION 
 
-.link a:hover:after{
-    width: 100%;
-    left: 0;
-    background: var(--accent-color);
-    cursor: pointer;
-  }
-
-.displayMobile li i {
-    padding: 0 1rem;
-    font-size: 2rem;
-    color: var(--accent3-color);
-}
-
-.displayMobile i {
-    transition: all 0.3s linear;
-        }
-  
-.displayMobile i:hover, .displayMobile i:active  {
-    transform: scale(1.4);
-     }
-
-/********** MAIN/HERO SECTION ***********/
+*****************/
 
 main {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .hero > * {
-    margin: 1.6rem auto;
-} 
- 
-.hero {
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content: space-evenly;
-    text-align: center;
-    margin: 5rem 0;
+  margin: 1.6rem auto;
 }
 
-.hero > i {
-    font-size: 6rem;
-    color: var(--accent-color);
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  margin: 12rem auto 8rem;
 }
 
 .hero h1 {
-    margin-top: 0;
-    font-size: 4rem;
-    color: var(--sub-color);
+  font-size: 3.5rem;
+  color: var(--sub-color);
 }
 
 .hero h1 > span {
-    color: var(--accent-color);
-    font-size: 4rem;
+  color: var(--accent-color);
+  font-size: 3.5rem;
 }
 
 .hero p {
-    font-size: 2.4rem;
-    color: #535353;
-    line-height: 1.5;
+  margin: 0 auto;
+  font-size: 2.4rem;
+  color: #535353;
 }
 
 .hero p span {
-    font-size: 2.4rem;
-    color: #535353;
-    border-bottom: 2px solid var(--accent3-color);
+  font-size: 2.4rem;
+  color: #535353;
+  border-bottom: 2px solid var(--accent3-color);
 }
 
 .socialLinks {
-    width:50%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  width: 50%;
+  margin-top: 5rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .socialLinks ul {
-    margin: 2rem auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+  /* margin: 2rem auto; */
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .socialLinks ul i {
-    padding: 0 3rem;
-    font-size: 3.2rem;
-    color: var(--accent2-color);   
+  padding: 0 3rem;
+  font-size: 3.2rem;
+  color: var(--accent2-color);
 }
 
-.fa-brands:hover  {
-    transition: scale(1.1);
+.fa-brands:hover {
+  transition: scale(1.1);
 }
 
 .socialLinks .fa-solid {
-    color: var(--accent3-color);
-    font-size: 3rem;
+  color: var(--accent3-color);
+  font-size: 3rem;
 }
 
+/******************
 
-/****** ABOUT ME SECTION *******/
+ABOUT ME SECTION 
+
+*******************/
 
 .aboutMe {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    background: var(--accent2-color);
-    color:var(--main-color); 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background: var(--accent2-color);
+  color: var(--main-color);
 }
 
 .aboutMe .container > * {
-    margin: 3rem auto;
-    /* padding: 0 1rem 0 1rem; */
+  margin: 3rem auto;
 }
 
 .aboutMe .container div > * {
-    margin: 1rem auto;
+  margin: 3rem auto;
 }
 
 .aboutMe > div {
-    text-align: center;
+  text-align: center;
 }
 
 .aboutMe h2 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 .aboutMe p {
-    font-size:2rem;
-    line-height: 1.5;
+  font-size: 2rem;
+  line-height: 1.5;
 }
 
 .aboutMe img {
-    height:15rem;
-    width: 15rem;
-    margin: 0;
-    border-radius: 5px;
-    /* filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(0, 0, 0, 0.5)); */
+  height: 15rem;
+  width: 15rem;
+  margin: 0;
+  border-radius: 5px;
+}
+
+/****** SKILLS & SERVICES *******/
+
+.skills-services {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background: var(--sub-color);
+  color: var(--main-color);
+  text-align: center;
+}
+
+.skills-services * {
+  margin: 2rem auto;
+}
+
+.skills-services .container > * {
+  margin: 2rem auto;
+}
+
+.skills-services .container div > * {
+  margin: 2rem auto;
+}
+
+.skills-services h2 {
+  font-size: 3rem;
+}
+
+.devIcons {
+  display: flex;
+}
+
+.devIcons i {
+  font-size: 3rem;
+}
+
+.servicesGrid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.servicesGrid div {
+  text-align: center;
+}
+
+.div1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.div2 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.div3 {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.div4 {
+  grid-area: 4 / 1 / 5 / 2;
+}
+
+.servicesGrid p {
+  font-size: 1.8rem;
+  padding: 0 2rem;
+}
+
+.servicesGrid i {
+  color: #fffffe;
+  font-size: 3rem;
+  margin-right: 1rem;
+}
+
+.servicesGrid h3 {
+  font-size: 2rem;
+  margin-left: 2rem;
 }
 
 /***** Projects and work section  *****/
 
 .myProjects {
- padding:5rem 0 0;
- display: flex;
- justify-content: space-evenly;
- align-items: center;
- flex-wrap: wrap;
- background: var(--main-color);
- color: var(--sub-color);
+  padding: 5rem 0 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  background: var(--main-color);
+  color: var(--sub-color);
 }
 
 .myProjects h2 {
- text-align: center;
- font-size: 3rem;
- color: var(--sub-color);
+  text-align: center;
+  font-size: 3rem;
+  color: var(--sub-color);
 }
 
 .myProjects h2 span {
-    font-size: 3rem;
-    color: var(--accent-color);
+  font-size: 3rem;
+  color: var(--accent-color);
 }
 
 .projectInfo {
-    display: flex;
-    align-items: left;
-    flex-direction: column;
-    margin: 5rem auto;
-    background: var(--main-color);
-    color: var(--accent2-color);
+  display: flex;
+  align-items: left;
+  flex-direction: column;
+  margin: 5rem auto;
+  background: var(--main-color);
+  color: var(--accent2-color);
 }
 
 .projectInfo > * {
-    margin: 1rem auto;
+  margin: 1rem auto;
 }
 
 .projectInfo > div > * {
-    margin: .5rem auto;
+  margin: 0.5rem auto;
 }
 
 .projectInfo > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .projectInfo img {
-    height: 20rem;
-    width: 30rem;
-    border: 3px solid var(--sub2-color);
+  height: 20rem;
+  width: 30rem;
+  border: 3px solid var(--sub2-color);
 }
 
 .projectInfo h3 {
-    text-align: center;
-    font-size: 1.8rem;
-    font-weight: 600;    
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 600;
 }
 
 .projectInfo p {
-    margin: 1rem 0;
-    padding: 0 1.5rem;
-    font-size: 1.6rem;
-    line-height: 1.3;
+  margin: 1rem 0;
+  padding: 0 1.5rem;
+  font-size: 1.6rem;
+  line-height: 1.3;
 }
 
 .myProjects ul {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .myProjects li {
-    margin: 0;
+  margin: 0;
 }
 
 .myProjects ul i {
-    font-size: 2.6rem;
-    padding: 0 1.2rem 0 1.2rem;
+  font-size: 2.6rem;
+  padding: 0 1.2rem 0 1.2rem;
 }
-
 
 .fa-js {
-    color: #F7DF1E;
+  color: #f7df1e;
 }
 .fa-css3-alt {
-    color: #2965f1;
+  color: #2965f1;
 }
 
 .fa-html5 {
-    color: #e34f26;
+  color: #e34f26;
 }
 
 .viewCodeBtn {
-    width: 100px;
-    height: 40px;
-    background: var(--accent3-color);
-    color: var(--sub2-color);
-    border: 1.5px solid var(--accent3-color);
-    border-radius: 3px;
-    font-size: 13px;
+  width: 100px;
+  height: 40px;
+  background: var(--accent3-color);
+  color: var(--sub2-color);
+  border: 1.5px solid var(--accent3-color);
+  border-radius: 3px;
+  font-size: 13px;
 }
 
 .viewCodeBtn:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 /****** contact info section ******/
 
 .contactInfo {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 3rem 1rem;
-    background: var(--sub2-color);
-    color: var(--sub-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 3rem 1rem;
+  background: var(--sub2-color);
+  color: var(--sub-color);
 }
 
 .contactInfo .container > * {
-    margin: 1.5rem auto;
+  margin: 1.5rem auto;
 }
 
-.contactInfo h2{
-    font-size: 3rem;
-    text-align: center;
+.contactInfo h2 {
+  font-size: 3rem;
+  text-align: center;
 }
 
 .contactInfo p {
-    margin: 0 auto;
-    font-size: 1.6rem;
-    text-align: center;
+  margin: 0 auto;
+  font-size: 1.6rem;
+  text-align: center;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-width:280px;
-    max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 280px;
+  max-width: 600px;
 }
 
-form input{
-    margin: .5rem 0;
-    height: 2rem;
-    width: 100%;
-    background-color: var(--main-color);
-    border: 1px solid black;
+form input {
+  margin: 0.5rem 0;
+  height: 2rem;
+  width: 100%;
+  background-color: var(--main-color);
+  border: 1px solid black;
 }
 
 ::placeholder {
-    color: var(--sub-color);
-    font-size: 1.2rem;
-    padding-left: .5rem;
+  color: var(--sub-color);
+  font-size: 1.2rem;
+  padding-left: 0.5rem;
 }
 
 form textarea {
-    margin: .5rem 0;
-    width: 100%;
-    color: var(--sub-color);
-    font-size: 1.2rem;
-    border: 1px solid black;
+  margin: 0.5rem 0;
+  width: 100%;
+  color: var(--sub-color);
+  font-size: 1.2rem;
+  border: 1px solid black;
 }
 
 #submitInfo button {
-    height: 50px;
-    width: 130px;
-    margin-top: 20px;
-    font-size: 1.8rem;
-    font-weight: 500;
-    border-style: none;
-    background: var(--accent3-color);
-    color: var(--sub2-color);
+  height: 50px;
+  width: 130px;
+  margin-top: 20px;
+  font-size: 1.8rem;
+  font-weight: 500;
+  border-style: none;
+  background: var(--accent3-color);
+  color: var(--sub2-color);
 }
 
 /********** Footer **********/
 footer {
-    padding: 4rem 0 4rem 0rem;
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    row-gap: 2rem;
-    background: var(--accent2-color);
+  padding: 4rem 0 4rem 0rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 2rem;
+  background: var(--accent2-color);
 }
 
 footer .socialLinks ul i {
-    color: var(--main-color);   
+  color: var(--main-color);
 }
 
 footer p {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 /******** Animations *********/
 
-.grow { 
-    transition: all .2s ease-in-out; 
-    }
+.grow {
+  transition: all 0.2s ease-in-out;
+}
 
-.grow:hover { 
-        transform: scale(1.1); 
-        } 
+.grow:hover {
+  transform: scale(1.1);
+}
 
 .fade-in {
-    opacity: 0;
-    transition: opacity 250ms ease-in;
+  opacity: 0;
+  transition: opacity 250ms ease-in;
 }
 
 .fade-in.appear {
-    opacity: 1;
+  opacity: 1;
 }
 
 .from-left {
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 .from-right {
-    -webkit-transform: translateX(50%);
-    transform: translateX(50%);
+  -webkit-transform: translateX(50%);
+  transform: translateX(50%);
 }
 
 .from-left,
 .from-right {
-    transition: opacity 250ms ease-in, transform 400ms ease-in;
-    opacity: 0;
+  transition: opacity 250ms ease-in, transform 400ms ease-in;
+  opacity: 0;
 }
 
 .from-left.appear,
 .from-right.appear {
-    transform: translateX(0);
-    opacity: 1;
+  transform: translateX(0);
+  opacity: 1;
 }
 
 /************** MEDIA QUERIES ****************/
 
-    @media screen and (min-width: 760px) {
+@media screen and (min-width: 800px) {
+  html {
+    font-size: 13px;
+  }
+  .nav-menu {
+    position: static;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    left: 0;
+    width: 40%;
+    margin: 0;
+  }
+  .nav-menu li {
+    padding: 1rem;
+  }
+  .nav-menu li a {
+    font-size: 1.4rem;
+  }
+  .nav-toggle {
+    display: none;
+  }
+  .link {
+    position: relative;
+  }
+  .link a:hover {
+    color: #5e5e5e;
+  }
 
-        html {
-            font-size: 13px;
-        }
+  .link a:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 3px;
+    display: block;
+    margin-top: 5px;
+    right: 0;
+    background: var(--accent-color);
+    transition: width 0.2s ease;
+    -webkit-transition: width 0.2s ease;
+  }
 
-        .displayMobile {
-          display: none;  
-        }
+  .link a:hover:after {
+    width: 100%;
+    left: 0;
+    background: var(--accent-color);
+    cursor: pointer;
+  }
+}
 
-        .displayDesktop{
-            display: flex;
-        }
+@media screen and (min-width: 1020px) {
+  html {
+    font-size: 16px;
+  }
 
-        
+  .aboutMe > .container {
+    flex-direction: row;
+  }
+
+  .projectInfo {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .projectInfo h3 {
+    margin-top: 0;
+  }
+
+  .projectInfo img {
+    width: 35rem;
+    height: 25rem;
+  }
+
+  .servicesGrid {
+    display: grid;
+    grid-template-columns: repeat(2, 4fr);
+    grid-template-rows: repeat(2, 4fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .div2 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  .div3 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .div4 {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+
+  @media screen and (min-width: 1435px) {
+    html {
+      font-size: 19px;
     }
+  }
 
-    @media screen and (min-width: 1020px) {
-
-        html {
-            font-size: 16px;
-        }
-
-        .aboutMe > .container{
-            flex-direction: row;
-        }
-
-        .projectInfo {
-            flex-direction: row;
-            justify-content: space-evenly;
-            align-items: center;
-        }
-        
-        .projectInfo h3 {
-            margin-top: 0;
-        }
-
-        .projectInfo img { 
-            width: 35rem;
-            height: 25rem;
-        }
+  @media screen and (min-width: 2500px) {
+    html {
+      font-size: 30px;
     }
-
-    @media screen and (min-width: 1435px) {
-
-            html {
-                font-size: 19px;
-            }
-        }
-
-    @media screen and (min-width: 2500px) {
-
-            html {
-                font-size: 30px;
-            }
-    }
-
-         
-
-        /* .container {
-            max-width: 700px;
-        } */
-
-
-
-         /* .container {
-             max-width: 1400px;
-         }
-
-         .aboutMe .container{
-           display: flex;
-           flex-direction: row;
-         }
-
-         .projectInfo{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-          }
-
-          .projectInfo ul{
-            justify-content: center;
-            align-items: center;
-            flex-basis: 25%;
-          }
-
-          .projectInfo h3 {
-              margin-top: 0;
-          } */
-
-     
+  }
+}
