--- a/style.css
+++ b/style.css
@@ -64,8 +64,8 @@ nav {
 #myLogo {
   display: flex;
   margin: 0;
-  width: 6rem;
-  height: 4rem;
+  width: 3rem;
+  height: 2.9rem;
 }
 .nav-menu {
   position: fixed;
@@ -262,7 +262,7 @@ ABOUT ME SECTION
 }
 
 .skills-services .container {
-    margin-top: 6rem;
+  margin-top: 6rem;
 }
 
 .skills-services .container > * {
@@ -394,6 +394,10 @@ ABOUT ME SECTION
 .myProjects ul {
   display: flex;
   justify-content: center;
+}
+
+.myProjects ul img {
+  font-size: 3rem;
 }
 
 .myProjects li {
