--- a/style.css
+++ b/style.css
@@ -51,12 +51,12 @@ a {
   font-size: 1.2rem;
 }
 #styleBtn a {
-  font-size:1.2rem;
+  font-size: 1.2rem;
 }
 
 #styleBtn a:visited {
   color: inherit;
-  font-size:1.2rem;
+  font-size: 1.2rem;
 }
 
 /************************ 
@@ -82,8 +82,8 @@ nav {
 #myLogo {
   display: flex;
   margin: 0;
-  width: 3rem;
-  height: 2.9rem;
+  width: 100%;
+  height: 3rem;
 }
 .nav-menu {
   position: fixed;
@@ -123,11 +123,11 @@ nav {
 .bar {
   display: block;
   width: 30px;
-  height: 3px;
-  margin: 5px auto;
+  height: 3.4px;
+  margin: 4.5px auto;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  background: var(--accent3-color);
+  background: var(--accent2-color);
 }
 .nav-menu.active {
   left: 0;
@@ -410,6 +410,7 @@ ABOUT ME SECTION
   padding: 0 1.5rem;
   font-size: 1.6rem;
   line-height: 1.3;
+  text-align: center;
 }
 
 .myProjects ul {
