--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ nav {
 #myLogo {
   display: flex;
   justify-content: flex-start;
+  -webkit-justify-content: flex-start;
   margin: 0;
   width: 100%;
   height: 3rem;
