--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ nav {
   min-height: 5rem;
   display: flex;
   justify-content: space-between;
+  -webkit-justify-content: space-between;
   align-items: center;
   /* box-shadow: 0 0 10px 1px rgb(0 0 0 / 20%); */
 }
